crates/sui-adapter-transactional-tests/tests/sui/coin_in_vec.exp
processed 5 tasks

init:
A: object(0,0)

task 1 'publish'. lines 6-32:
Error: warning[W09001]: unused alias
   ┌─ /var/folders/9l/kfqd6hv17d1_8yxpd6zwys8m0000gn/T/.tmpixmVoU:11:19
   │
11 │     use sui::bfc::BFC;
   │                   ^^^ Unused 'use' of alias 'BFC'. Consider removing it
   │
   = This warning can be suppressed with '#[allow(unused_use)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E03004]: unbound type
   ┌─ /var/folders/9l/kfqd6hv17d1_8yxpd6zwys8m0000gn/T/.tmpixmVoU:16:28
   │
16 │         coins: vector<Coin<OBC>>,
   │                            ^^^ Unbound type 'OBC' in current scope

error[E03004]: unbound type
   ┌─ /var/folders/9l/kfqd6hv17d1_8yxpd6zwys8m0000gn/T/.tmpixmVoU:21:55
   │
21 │     public fun deposit(wrapper: &mut Wrapper, c: Coin<OBC>) {
   │                                                       ^^^ Unbound type 'OBC' in current scope



task 2 'programmable'. lines 34-36:
created: object(1,0)
mutated: object(0,0)
gas summary: computation_cost: 1000000, storage_cost: 2614400,  storage_rebate: 0, non_refundable_storage_fee: 0

task 3 'run'. lines 38-38:
Error: INVALID TEST. Unknown object, object(2,0)

task 4 'run'. lines 40-40:
Error: Error checking transaction input objects: DependentPackageNotFound { package_id: 0x0000000000000000000000000000000000000000000000000000000000000000 }
